# lab-rag

./: .env.example  .gitignore  README.md  pyproject.toml
cli/: hybrid_search_cli.py  index.py  keyword_search.py  keyword_search_cli.py  loader.py  semantic_search_cli.py
cli/lib/: hybrid_search.py  index.py  semantic_search.py
tests/: test_index.py
